--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js",
+    "server": "node index.js",
     "client": "cd ../ && npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
