--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "path": "^0.12.7"
-  }
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "7.5.6"
+} 
 }
