--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "server": "nodemon index.js",
-    "client": "cd ../ && npm start --prefix frontend",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "concurrently": "^6.1.0",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "mysql2": "^2.2.5"
   }
 }
