--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5"
-  }
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "7.5.6"
+  },
+  "homepage": "."
 }
